iRedMail-1.2.2:
    * Supports new distribution release:
        + Ubuntu 20.04.
          All 3 backends are supported: MariaDB, PostgreSQL, OpenLDAP.
        + OpenBSD 6.7.

    * Dropped distribution release:
        - OpenBSD 6.6. Please use the latest stable release 6.7 instead.

    * Improvements:
        + Enable SOGo for CentOS 8 and Ubuntu 20.04. Thanks to SOGo team.

    * Fixed issues:
        - Add missing INDEX for SQL column `msgs.time_iso` in `amavisd`
          database.

    * Updated packages:
        + netdata -> 1.22.1

iRedMail-1.2.1:
    * Switch self-signed ssl cert key length to 4096.
    * Swith DKIM key length to 2048.
    * Updated packages:
        + Roundcube webmail -> 1.4.4. it includes few security fixes.

iRedMail-1.2:
    * Supports new distribution release:
        + CentOS 8

    * Dropped distribution release:
        - OpenBSD 6.5. Please use the latest stable release 6.6 instead.

    * Improvements:
        + Able to store banned IP addresses in SQL db.
          iRedAdmin-Pro customers can view banned addresses and unban them on
          web UI directly.
        + Fail2ban now works on OpenBSD.
        + Track last login of both POP3/IMAP logins.

    * Fixed issues:
        - Use 'pspell' spell check engine instead of default 'googie' which
          sends data to Roundcube website.
        - Not install package `libclamunrar9` for unpacking rar file on Ubuntu.
        - installer: not correctly update allowed_clients in php-fpm pool
          config file for FreeBSD Jail.
        - Amavisd can not store mail subject with emoji characters.

    * Updated packages:
        + Roundcube webmail -> 1.4.3
        + iRedAPD -> 3.6
        + netdata -> 1.21.1

iRedMail-1.1:
    * Improvements:
        - tools/backup_*.sh: do not rely on Python to calculate dates.

    * Fixed issues:
        - PostgreSQL backend: improper index for table `vmail.sender_relayhost`.