@@ -180,7 +180,11 @@ check_env()
         # Many packages are in 'universe' apt repo.
         [ -x /usr/bin/apt-add-repository ] || ${APTGET} install -y software-properties-common
 
-        /usr/bin/apt-add-repository -u universe
+        if [ X"${UBUNTU_MIRROR_SITE}" != X'' ]; then
+            apt-add-repository "deb ${UBUNTU_MIRROR_SITE} ${DISTRO_CODENAME} universe"
+        else
+            apt-add-repository -u universe
+        fi
     fi
 
     # Check config tool: dialog.
