@@ -2,5 +2,5 @@ SHA256 (misc/uwsgi-2.0.18.tar.gz) = 4972ac538800fb2d421027f49b4a1869b66048839507
 SHA256 (misc/iRedAdmin-1.0.tar.bz2) = 84b8eea9472aac3ab6d4cfc914a0277b484f99ec1ed32914b144449c218d3da1
 SHA256 (misc/mlmmjadmin-beta.tar.gz) = 2baa56a81c9eb11ec4e92e932b18a7d3fb668ae0ac80d0f6656453fe15e1780f
 SHA256 (misc/iRedAPD-beta.tar.gz) = a6bd7b7c37046a4415b651570719fdfa194c62e81c89c40bbbaf4e0ce8edb9c4
-SHA256 (misc/roundcubemail-1.4.4-complete.tar.gz) = 2b8923836a0f83f9806fffc6dfa245705968a0005deab66c1056570eae11c7d7
+SHA256 (misc/roundcubemail-1.4.5-complete.tar.gz) = 6e1c88be232f7165f538e7d91ba655bb416af6c4d34ec2c28dbb85734df752e2
 SHA256 (misc/fail2ban-0.11.1.tar.gz) = 71d2a52b66bb0f87ac3812246bdd3819ec561913cd44afd39130a342f043aa6d
