@@ -1,4 +1,4 @@
-iRedMail-1.2.2:
+iRedMail-1.3:
     * Supports new distribution release:
         + Ubuntu 20.04.
           All 3 backends are supported: MariaDB, PostgreSQL, OpenLDAP.
@@ -15,6 +15,7 @@ iRedMail-1.2.2:
           database.
 
     * Updated packages:
+        + Roundcube webmail -> 1.4.5, it includes 4 security fixes.
         + netdata -> 1.22.1
 
 iRedMail-1.2.1:
